[tool.black]
line-length = 80

[tool.poetry]
name = "pdfcombine"
version = "0.1"
description = "A simple command line tool for splitting, merging, and rotating PDF files."
authors = ["Adam Heins <mail@adamheins.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pypdf = "^5.1.0"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdfcombine = "pdfcombine.cli:main"
